<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:text="@string/back_button_symbol"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="20pt"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_label"
            android:textSize="18pt"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lessons_begin_time_label"/>

    <EditText
        android:id="@+id/lessons_begin_time_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:inputType="time"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lesson_duration_label"/>

    <EditText
        android:id="@+id/lesson_duration_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:inputType="time"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/break_duration_label"/>

    <EditText
        android:id="@+id/break_duration_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:inputType="time"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/long_break_duration_label"/>

    <EditText
        android:id="@+id/long_break_duration_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:inputType="time"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incollege_server_hostname_label"/>

    <EditText
        android:id="@+id/incollege_server_hostname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:inputType="time"/>
</LinearLayout>